--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -3,6 +3,7 @@ encoding//app/dbs/main_dbs.py=utf-8
 encoding//app/others/tasks.py=utf-8
 encoding//app/utils/String.py=utf-8
 encoding//app/views/main_views.py=utf-8
+encoding//app/wraps/allow_request_wrap.py=utf-8
 encoding//app/wraps/async_task_wrap.py=utf-8
 encoding//app/wraps/login_wrap.py=utf-8
 encoding/run.py=utf-8
