--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,7 +1,11 @@
 eclipse.preferences.version=1
+encoding//app/__init__.py=utf-8
+encoding//app/dbs/DB.py=utf-8
+encoding//app/dbs/__init__.py=utf-8
 encoding//app/dbs/main_dbs.py=utf-8
 encoding//app/lib/pyquery/pyquery.py=utf-8
 encoding//app/others/tasks.py=utf-8
+encoding//app/redis/REDIS.py=utf-8
 encoding//app/utils/Path.py=utf-8
 encoding//app/utils/Request.py=utf-8
 encoding//app/utils/String.py=utf-8
@@ -11,6 +15,8 @@ encoding//app/utils/jinja2_ex/template_filter.py=utf-8
 encoding//app/views/main_views.py=utf-8
 encoding//app/wraps/allow_request_wrap.py=utf-8
 encoding//app/wraps/async_task_wrap.py=utf-8
+encoding//app/wraps/db_connect_warp.py=utf-8
 encoding//app/wraps/login_wrap.py=utf-8
+encoding//app/wraps/singleton_wrap.py=utf-8
 encoding//app/wraps/trace_wrap.py=utf-8
 encoding/run.py=utf-8
