appstore spider test page

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -13,6 +13,7 @@ encoding//app/utils/Util.py=utf-8
 encoding//app/utils/appstore/appstore_spider.py=utf-8
 encoding//app/utils/jinja2_ex/template_filter.py=utf-8
 encoding//app/views/main_views.py=utf-8
+encoding//app/views/test_views.py=utf-8
 encoding//app/wraps/allow_request_wrap.py=utf-8
 encoding//app/wraps/async_task_wrap.py=utf-8
 encoding//app/wraps/db_connect_warp.py=utf-8
@@ -20,3 +21,4 @@ encoding//app/wraps/login_wrap.py=utf-8
 encoding//app/wraps/singleton_wrap.py=utf-8
 encoding//app/wraps/trace_wrap.py=utf-8
 encoding/run.py=utf-8
+encoding/run_abtest.py=utf-8
