update & add mongdb

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>ab-test</name>
+	<name>flask_standard_sample</name>
 	<comment></comment>
 	<projects>
 	</projects>
