--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -6,10 +6,10 @@ encoding//app/dbs/__init__.py=utf-8
 encoding//app/dbs/main_dbs.py=utf-8
 encoding//app/lib/pyquery/pyquery.py=utf-8
 encoding//app/others/tasks.py=utf-8
-encoding//app/redis/REDIS.py=utf-8
-encoding//app/utils/Path.py=utf-8
-encoding//app/utils/Request.py=utf-8
-encoding//app/utils/String.py=utf-8
+encoding//app/redis/Redis.py=utf-8
+encoding//app/utils/PathUtil.py=utf-8
+encoding//app/utils/RequestUtil.py=utf-8
+encoding//app/utils/StringUtil.py=utf-8
 encoding//app/utils/Util.py=utf-8
 encoding//app/utils/appstore/appstore_spider.py=utf-8
 encoding//app/utils/jinja2_ex/template_filter.py=utf-8
@@ -22,4 +22,4 @@ encoding//app/wraps/login_wrap.py=utf-8
 encoding//app/wraps/singleton_wrap.py=utf-8
 encoding//app/wraps/trace_wrap.py=utf-8
 encoding/run.py=utf-8
-encoding/run_abtest.py=utf-8
+encoding/run_sample.py=utf-8
